# LLMops

./: README.md  main.py  pyproject.toml  re.txt  repo_structure.txt
data/: agenticai.txt
mulit_doc_chat/config/: yaml.txt
mulit_doc_chat/logger/: custom_logger.py
multi_doc_chat/utils/: model_loader.py
notebook/: rag.ipynb
utils/: note.txt
