[project]
name = "2-llmops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

# IMPORTANT: restrict python version
requires-python = ">=3.10,<3.13"

dependencies = [
    "docx2txt==0.9",
    "faiss-cpu==1.8.0",
    "fastapi==0.115.6",
    "from-root>=1.3.0",
    "ipykernel==6.30.0",
    "jinja2==3.1.4",
    "langchain==0.3.27",
    "langchain-community==0.3.27",
    "langchain-core==0.3.72",
    "langchain-google-genai==2.1.8",
    "langchain-groq==0.3.6",
    "langchain-openai==0.2.10",
    "langsmith>=0.3.45,<0.4.0",
    "pandas==2.2.2",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "structlog==24.1.0",
    "uvicorn==0.32.1",
]
